--- a/views/ctrl.hbs
+++ b/views/ctrl.hbs
@@ -1,14 +1,33 @@
 <h1>{{title}}</h1>
 <p>CONTROL {{title}}</p>
 
-<div class="demo" id="1"><img src="http://unsplash.it/557/387/" alt="" class="demo-image"></div>
-<div class="demo" id="2"><img src="http://unsplash.it/602/660/" alt="" class="demo-image"></div>
-<div class="demo" id="3"><img src="http://unsplash.it/660/646/" alt="" class="demo-image"></div>
-<div class="demo" id="4"><img src="http://unsplash.it/741/375/" alt="" class="demo-image"></div>
-<div class="demo" id="5"><img src="http://unsplash.it/813/455/" alt="" class="demo-image"></div>
-<div class="demo" id="6"><img src="http://unsplash.it/470/896/" alt="" class="demo-image"></div>
-<div class="demo" id="7"><img src="http://unsplash.it/664/653/" alt="" class="demo-image"></div>
-<div class="demo" id="8"><img src="http://unsplash.it/708/313/" alt="" class="demo-image"></div>
+
+
+
+<main class="mastcontent">
+    <section class="intro-copy padding-y padding-lg">
+        <div class="container">
+            <div class="grid">
+                <div class="grid__column grid__column--12 grid__column--12--md">
+                    <h1>Title</h1>
+
+                    <div class="i-grid" id="macy-container">
+
+{{#images}}
+
+<div id="{{id}}" class="i-grid-item">
+      <img src="imgs/{{filename}}" />
+</div>
+
+
+{{/images}}
+</div>
+</div>
+
+</div>
+</div>
+</section>
+</main>
 
 <script>
 $(document).ready(function(){
