--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,18 +2,35 @@
 <p>Welcome to {{title}}</p>
 
 
-<p>Hello, my name is {{name}}. I am from {{hometown}}. I have
-             {{kids.length}} kids:</p>
-             <ul>{{#kids}}<li>{{name}} is {{age}}</li>{{/kids}}</ul>
 
-             <div class="demo" id="1"><img src="http://unsplash.it/557/387/" alt="" class="demo-image"></div>
-             <div class="demo" id="2"><img src="http://unsplash.it/602/660/" alt="" class="demo-image"></div>
-             <div class="demo" id="3"><img src="http://unsplash.it/660/646/" alt="" class="demo-image"></div>
-             <div class="demo" id="4"><img src="http://unsplash.it/741/375/" alt="" class="demo-image"></div>
-             <div class="demo" id="5"><img src="http://unsplash.it/813/455/" alt="" class="demo-image"></div>
-             <div class="demo" id="6"><img src="http://unsplash.it/470/896/" alt="" class="demo-image"></div>
-             <div class="demo" id="7"><img src="http://unsplash.it/664/653/" alt="" class="demo-image"></div>
-             <div class="demo" id="8"><img src="http://unsplash.it/708/313/" alt="" class="demo-image"></div>
+             <main class="mastcontent">
+                 <section class="intro-copy padding-y padding-lg">
+                     <div class="container">
+                         <div class="grid">
+                             <div class="grid__column grid__column--12 grid__column--12--md">
+                                 <h1>Title</h1>
+
+                                 <div class="i-grid" id="macy-container">
+
+            {{#images}}
+
+            <div id="{{id}}" class="i-grid-item">
+               <a href="imgs/{{filename}}" data-lightbox="collection1" data-title="{{title}}">
+                   <img src="imgs/{{filename}}" />
+               </a>
+            </div>
+
+
+            {{/images}}
+            </div>
+         </div>
+
+         </div>
+         </div>
+         </section>
+         </main>
+
+
 
 <script src="/socket.io/socket.io.js" ></script>
 <script src="/javascripts/moveTo.js"></script>
@@ -25,7 +42,10 @@ var socket = io('//localhost:3000');
 socket.on('socketToMe', function (data) {
   console.log(data);
   const target = document.getElementById(data.imagenumber);
-  moveTo.move(target);
+  moveTo.move(target, {    callback: function (target) {
+    console.log('moved to '+target);
+      // Overwrites global callback
+    }});
 
 });
 </script>
