--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+    <link href="/stylesheets/tent.min.css" rel="stylesheet" />
+    <link href="/stylesheets/lightbox.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700%7CRoboto:400,700,700italic,400italic" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
+
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        /* force scrollbar, prevents initial gap */
+
+        html {
+            overflow-y: scroll;
+        }
+    </style>
+
+
   </head>
   <body>
+
+    <header class="masthead bg-color-primary inverse padding-y padding-xs">
+        <div class="container">
+            <div class="grid grid--center">
+                <div class="grid__column">
+                    <h1 class="title title--xl">BWPS Junior Competition 2017</h1>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
     {{{body}}}
-  </body>
+
+    
+    <script src="/javascripts/lightbox.min.js"></script>
+    </body>
+    <script src="./javascripts/macy.js"></script>
+    <script>
+    $(document).ready(function() {
+    var macy = Macy({
+    container: '#macy-container',
+    trueOrder: false,
+    waitForImages: false,
+    margin: 24,
+    breakAt: {
+    1200: 5,
+    940: 3,
+    520: 2,
+    400: 1
+    }
+    });
+
+
+    });
+    </script>
 </html>
