--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,18 +18,6 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        /* force scrollbar, prevents initial gap */
-
-        html {
-            overflow-y: scroll;
-        }
-    </style>
-
-
   </head>
   <body>
 
@@ -48,7 +36,7 @@
 
     {{{body}}}
 
-    
+
     <script src="/javascripts/lightbox.min.js"></script>
     </body>
     <script src="./javascripts/macy.js"></script>
@@ -58,6 +46,7 @@
     container: '#macy-container',
     trueOrder: false,
     waitForImages: false,
+    columns : 4,
     margin: 24,
     breakAt: {
     1200: 5,
