--- a/views/ctrl.hbs
+++ b/views/ctrl.hbs
@@ -1,15 +1,9 @@
-<h1>{{title}}</h1>
-<p>CONTROL {{title}}</p>
-
-
-
-
 <main class="mastcontent">
     <section class="intro-copy padding-y padding-lg">
         <div class="container">
             <div class="grid">
                 <div class="grid__column grid__column--12 grid__column--12--md">
-                    <h1>Title</h1>
+                    <h3>Tap a picture to show on the display</h3>
 
                     <div class="i-grid" id="macy-container">
 
