--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,16 +24,16 @@
     <header class="masthead bg-color-primary inverse padding-y padding-xs">
         <div class="container">
             <div class="grid grid--center">
-                <div class="grid__column">
-                    <h1 class="title title--xl">BWPS Junior Competition 2017</h1>
 
+<div class="grid__column grid__column--8 grid__column--8--md">
+                    <h1 class="title title--lg">BWPS Junior Competition 2017</h1>
+                  </div>
+                  <div class="grid__column grid__column--4 grid__column--4--md">
+                    <img id="1" src="/images/BWPSLogo2016_20160925.jpg" />
                 </div>
             </div>
         </div>
     </header>
-
-
-
     {{{body}}}
 
 
